--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:9KFFP9YBEA0O5z7UrovECPQwU1ZHXESGeHwPRmtvMtc=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
