--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:9KFFP9YBEA0O5z7UrovECPQwU1ZHXESGeHwPRmtvMtc=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE='Asia/Dhaka'
+APP_URL=http://localhost:8199
+API_URL=http://localhost:8199
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
